# ClimatELi

./: README.md  pyproject.toml  requirements.txt
dataset/gold_tokenized/: en_academic_ClimateFinance.txt  en_ipcc_chap01.txt  en_ipcc_chap10.txt  en_news_AustralianTown.txt  en_wiki_ParisAgreement.txt
gold_tsv/main/: en_academic_ClimateFinance.tsv  en_ipcc_chap01.tsv  en_ipcc_chap10.tsv  en_news_AustralianTown.tsv
human_annotation/double/: en_wiki_ParisAgreement.txt
human_annotation/main/: en_academic_ClimateFinance.txt  en_academic_NewYorkState.txt  en_ipcc_chap01.txt  en_ipcc_chap10.txt  en_news_AustralianTown.txt  en_news_MexicoMorocco.txt  en_vlog_BiggestClimateBill.txt  en_vlog_HowClimateChangeWorks.txt  en_wiki_ClimateChange.txt  en_wiki_ParisAgreement.txt
raw_document/gold_tokenized/: en_academic_NewYorkState.txt  en_news_MexicoMorocco.txt  en_vlog_BiggestClimateBill.txt  en_vlog_HowClimateChangeWorks.txt  en_wiki_ClimateChange.txt
raw_document/raw/: de_academic_Bauleitplanung.txt  de_academic_BiologischeInvasionen.txt  de_academic_ErdeLuftWasserFeuer.txt  de_academic_Flächenproduktivität.txt  de_academic_Gletscherskitourismus.txt  de_academic_Leguminosen.txt  de_academic_RäumlichenPlanung.txt  de_academic_SmartCity.txt  de_academic_TierweltDerAlpen.txt  de_academic_Wasser.txt  de_ipcc_SYR.txt  de_ipcc_WG1A.txt  de_ipcc_WG1B.txt  de_ipcc_WG1C.txt  de_ipcc_WG2B.txt  de_ipcc_WG2C.txt  de_ipcc_WG2D.txt  de_ipcc_WG3B.txt  de_ipcc_WG3C.txt  de_ipcc_WG3D.txt  de_news_AchtArten.txt  (+79 more)
utils/: evaluator.py  generator.py  validator.py  visualize.py
(+7 files in other folders)
