[tool.poetry]
name = "climateli"
version = "0.1.0"
description = ""
authors = ["zhoush <nairoo@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.5.1"
requests = "^2.32.3"
bs4 = "^0.0.2"
matplotlib = "^3.9.0"
stanza = "^1.8.2"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
